[package]
name = "systems_programming"
version = "0.1.0"
edition = "2024"

[dependencies]
# Dependencies for memory examples
piston_window = "0.117"
piston2d-graphics = "0.39"
rand = "0.8"
winapi = "0.2"
# Provides interaction with KERNEL.DLL from Windows API
kernel32-sys = "0.2"

# Dependencies for files and storage examples
bincode = "1"
serde = "1"
serde_cbor = "0.8"
serde_derive = "1"
serde_json = "1"

# Dependencies used for key value store 
byteorder = "1.2"
crc = "1.7"

[[example]]
name = "bit_patterns_types"
path = "examples/data/bit_patterns_types.rs"

[[example]]
name = "integer_life"
path = "examples/data/integer_life.rs"

[[example]]
name = "decimal_representation"
path = "examples/data/decimal_representation.rs"

[[example]]
name = "fixed_point_numbers"
path = "examples/data/fixed_point_numbers.rs"

[[example]]
name = "random_probabilities"
path = "examples/data/random_probabilities.rs"

[[example]]
name = "pointers_with_references"
path = "examples/memory/pointers_with_references.rs"

[[example]]
name = "smart_pointers"
path = "examples/memory/smart_pointers.rs"

[[example]]
name = "scanning_running_program_memory"
path = "examples/memory/scanning_running_program_memory.rs"

[[example]]
name = "inspect_program_memory"
path = "examples/memory/inspect_program_memory.rs"

[[example]]
name = "formats"
path = "examples/files_and_storage/formats.rs"

[[example]]
name = "hexdump"
path = "examples/files_and_storage/hexdump.rs"

[[example]]
name = "writing_integers"
path = "examples/files_and_storage/writing_integers.rs"

[[example]]
name = "parity_bit"
path = "examples/files_and_storage/parity_bit.rs"

[[example]]
name = "json"
path = "examples/files_and_storage/json.rs"

[[example]]
name = "btree_map"
path = "examples/files_and_storage/btree_map.rs"